--- a/README
+++ b/README
@@ -1,1 +1,8 @@
 This is a vocabulary file for iVocabulary from German to Czech, so all further explanation will be in German.
+
+Dieses Projekt enthält eine Vokabel-Datei für Deutsch-Tschechich mit allen Vokabeln aus dem Buch 
+Ceština expres 1, sortiert nach Lektionen und Seiten aus diesem Buch.
+
+Die Datei cestina-expres-1.xvoc kann mit Hilfe dieses Editors http://apps.chbeer.de/de/ivocabulary/iphone/#java 
+mit der iPhone App 'iVocabulary' synchronisiert werden. Man hat dadurch einen vollständigen Vokabeltrainer
+für Deutsch-Tschechisch und umgekehrt.
